style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

:root {
  --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0.24);
  --font-family: 'Nunito', sans-serif;
}

* {
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
  background: rgb(235, 235, 235);
  padding: 0;
  margin: 0;
}

.container {
  margin: 30px auto;
  width: 500px;
}

.heading1 {
  text-align: center;
  font-family: var(--font-family);
}

h2 {
  font-family: var(--font-family);
}

.heading2 {
  text-align: center;
}

.displayContainer {
  background-color: rgb(255, 255, 255);
  border-radius: 7px;
  box-shadow: var(--box-shadow);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  margin: 20px;
}

.error,
.error2 {
  position: fixed;
  left: 0;
  top: 0;
  height: 100%;
  width: 100%;
  color: red;
  font-size: 20px;
  font-weight: bold;
  display: none;
  z-index: 1009;
}
.errorMsg {
  position: relative;
  text-align: center;
  top: 50%;
}

#form {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.overlay {
  display: none;
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: #fff;
  opacity: 0.8;
  z-index: 1001;
}

.expenseDisplayName,
.incomeDisplayName {
  padding: 0;
  display: flex;
  flex-direction: column;
  width: 90%;
  margin: auto;
  height: 45vh;
  overflow: hidden;
  flex-wrap: wrap;
}

.expenseDisplayName ul,
.incomeDisplayName ul {
  list-style-type: none;
  background-color: white;
  display: flex;
  padding: 0;
  margin: 3px 0px;
  justify-content: space-between;
  box-shadow: var(--box-shadow);
  border-radius: 5px;
  width: 40%;
}
.expenseDisplayName ul:hover,
.incomeDisplayName ul:hover {
  background-color: rgb(238, 177, 177);
}
.expenseDisplayName ul {
  border-bottom: red 1px solid;
  border-right: 2px solid red;
}

.incomeDisplayName ul {
  border-bottom: 1px solid green;
  border-right: 2px solid green;
}

.transactionCont {
  border-radius: 15px;
  display: flex;
  max-width: 1200px;
  margin: auto;
}

.expenseDisplayCont,
.incomeDisplayCont {
  background: white;
  border-radius: 20px;
  display: flex;
  flex-direction: column;
  width: 50%;
  box-shadow: var(--box-shadow);
  margin: 0.5rem;
}

.incomeDisplayCont {
  border-left: 1px dotted grey;
}

.expenseDisplayCont h2,
.incomeDisplayCont h2 {
  text-align: center;
}

/* Buttons */
.deleteBtn {
  display: flex;
  font-size: 12px;
  width: 100%;
  margin: 5px;
  justify-content: space-between;
  align-items: center;
}

.buttonContainer {
  text-align: center;
}
.bold {
  font-weight: 900;
  align-self: flex-end;
  justify-self: flex-end;
}
.deleteBtn button {
  width: 30px;
  height: 20px;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  text-transform: capitalize;
  border-radius: 5px;
  background-color: rgb(255, 199, 116);
}

.launchIncomeBtn,
.launchExpenseBtn,
.btn1,
.btn2 {
  background-color: rgba(252, 129, 58, 0.616);
  color: rgb(255, 255, 255);
  border: none;
  outline: none;
  margin: 0.3rem;
  width: 100px;
  height: 35px;
  border-radius: 3px;
  box-shadow: 12px 10px 25px -17px rgb(0, 0, 0);
  cursor: pointer;
}
.launchIncomeBtn:hover,
.launchExpenseBtn:hover,
.btn1:hover,
.btn2:hover {
  background-color: rgba(0, 126, 126, 0.294);
  color: #333;
}

.launchIncomeBtn {
  background-color: rgb(137, 199, 165);
}

.sortIncBtn,
.sortExpBtn {
  background-color: rgba(221, 93, 238, 0.39);
  color: white;
  border: none;
  outline: none;
  margin: 0.3rem;
  margin-bottom: 1rem;
  width: 100px;
  height: 35px;
  border-radius: 3px;
  box-shadow: 12px 10px 25px -17px rgb(0, 0, 0);
  cursor: pointer;
}

.sortExpBtn:hover,
.sortIncBtn:hover {
  background-color: rgb(143, 25, 158);
  color: white;
}

input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

input {
  padding: 10px;
  border-radius: 5px;
  margin: 4px;
  box-shadow: var(--box-shadow);
  border: none;
}

.incExpContainer {
  display: flex;
  width: 80%;
  justify-content: space-between;
}

.heading4 {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--font-family);
  width: 50%;
}

.heading4:first-child {
  border-right: 1px solid #dedede;
}

.incomeTotal {
  color: green;
}

.expenseTotal {
  color: red;
}

/* MEDIA QUERIES */

@media (max-width: 1024px) {
  .break {
    display: none;
  }
  .container {
    text-align: center;
    margin-top: 30px;
  }
}

@media (max-width: 480px) {
  .container {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin-top: 0;
    margin-bottom: 9px;
  }
  .transactionCont {
    flex-direction: column;
    width: 100%;
  }
  .expenseDisplayCont,
  .incomeDisplayCont {
    width: 95%;
    border-radius: 10px;
    margin: 5px auto;
  }
  .incomeDisplayCont {
    border-left: none;
    margin-bottom: 1.5rem;
  }
  .heading1 {
    margin-top: 20px;
    font-size: 26px;
  }
  .displayContainer {
    display: flex;
    flex-direction: column;
    width: 300px;
    height: auto;
    margin: auto;
    padding: 0;
    justify-content: center;
    align-items: center;
  }
  .incExpContainer {
    display: flex;
    flex-direction: column;
    width: 100%;
    margin: auto;
    justify-content: center;
    align-items: center;
  }
  .expenseDisplayName,
  .incomeDisplayName {
    height: 30vh;
  }
  .expenseDisplayName ul,
  .incomeDisplayName ul {
    width: 50%;
  }
  .buttonContainer {
    display: flex;
    width: 40%;
    text-align: center;
    margin: auto;
    margin-top: 1rem;
    align-items: center;
    position: fixed;
    bottom: 1rem;
    right: 1rem;
    opacity: 0.9;
  }
  .launchIncomeBtn,
  .launchExpenseBtn {
    height: 3rem;
    font-weight: 700;
    box-sizing: var(--box-shadow);
  }
  .heading4:first-child {
    border-right: none;
  }
  .heading1 {
    margin-bottom: 0;
  }

  input {
    width: 100%;
  }
  ::placeholder {
    font-size: 12px;
  }
  .break {
    display: none;
  }
}

/* login modal */
.expenseModal,
.incomeModal {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: aliceblue;
  opacity: 0;
  visibility: hidden;
  transform: scale(1.1);
  transition: visibility 0s linear 0.25s opacity 0.25s 0s, transform 0.25s;
}

.modalContent {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: white;
  padding: 1rem 1.5rem;
  width: 24rem;
  border-radius: 10px;
  box-shadow: var(--box-shadow);
}

.closeIncomeModal,
.closeExpenseModal {
  float: right;
  width: 1.5rem;
  line-height: 1.5rem;
  text-align: center;
  cursor: pointer;
  border-radius: 5px;
  background-color: lightgray;
}

.showModal {
  opacity: 1;
  visibility: visible;
  transform: scale(1);
  transition: visibility 0s linear 0.25s opacity 0.25s 0s, transform 0.25s;
}

